Bug 89165 - FILEOPEN: Hang loading .docx with frame/textboxes
Summary: FILEOPEN: Hang loading .docx with frame/textboxes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bisected, filter:docx, perf, regression
: 90224 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-06 10:42 UTC by actionmystique
Modified: 2016-10-25 19:21 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Same file without fonts, so it weights less than 10 mbs (8.40 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-09-15 12:47 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description actionmystique 2015-02-06 10:42:52 UTC
The previous versions of writer were able to open the same file and convert it, although there were many errors.

The last release 4.4 is stuck while opening and converting the file which is available here: https://drive.google.com/file/d/0B6XxNd5c3zV_R0Fmc1pkc29RR1U/view?usp=sharing. 
Only a white screen shows up during the never ending process.
Comment 1 Buovjaga 2015-02-07 10:51:06 UTC
3.5.0 was the only version tested where it didn't hang on opening.

4.5 Linux debug output:
warn:legacy.osl:4180:1:oox/source/core/contexthandler2.cxx:112: ContextHandler2Helper::implEndElement - context stack broken
warn:oox:4180:1:oox/source/drawingml/shapecontext.cxx:124: ShapeContext::onCreateContext: unhandled element: 3952
warn:oox:4180:1:oox/source/drawingml/shapecontext.cxx:124: ShapeContext::onCreateContext: unhandled element: 3953
warn:legacy.osl:4180:1:vcl/source/filter/wmf/emfwr.cxx:1512: EMFWriter::ImplWriteActions: unsupported MetaAction #150
warn:legacy.osl:4180:1:vcl/source/filter/wmf/wmfwr.cxx:1633: Unsupported meta action!
warn:legacy.osl:4180:1:oox/source/core/contexthandler2.cxx:112: ContextHandler2Helper::implEndElement - context stack broken
warn:legacy.osl:4180:1:oox/source/helper/storagebase.cxx:67: StorageBase::StorageBase - missing base input stream

Win 7 Pro 64-bit, LibO Version: 4.4.0.3
Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Locale: fi_FI

Version: 4.5.0.0.alpha0+
Build ID: 99c00b090533da9818444be2831b8da0e713e5f9
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-04_06:38:53
Locale: fi_FI

Ubuntu 14.10 64-bit Version: 4.5.0.0.alpha0+
Build ID: e98b6027458dd9410e27c5f273f4db5cc1443b01
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-02-05_02:48:19
Locale: en_US

Version: 4.4.0.3
Build ID: 40m0(Build:3)
Locale: en_US

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 2 Matthew Francis 2015-02-16 09:25:36 UTC
The hang seems to have begun at the below commit.

Adding Cc: to vmiklos@collabora.co.uk; Could you possibly take a look at this? Thanks


commit c00d81612e128b74c23c95e011b482dc3918fca4
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Fri Jun 27 13:47:11 2014 +0200

    SwFlyFrm::Format: inform our custom shape about size changes if needed
    
    This adds support for the following scenario:
    
    - Shape has no editeng text, but a textbox
    - Shape has automatic size
    - User edits the fly frame (serving as the textbox of the draw shape)
      and expects that both the shape and the textbox gets resized
      accordingly
    
    Note that this way we can signal our size request for the textbox, and
    the custom shape takes care of resizing the shape in a way, so that
    after the resize, the text area counted from the custom shape geometry
    will be exactly what we requested. (I.e. just asking the shape to have
    the same size as the fly would work for rectangle, but not e.g. for
    triangles.)
    
    Change-Id: I1e7efd00db52cf28481f6821ea6949f748b855e7
Comment 3 Xisco Faulí 2015-09-15 12:47:44 UTC
Created attachment 118740 [details]
Same file without fonts, so it weights less than 10 mbs

This issue is still present in

Version: 5.0.1.2
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: es-ES (es_ES)

on Windows 7 (64-bit)
Comment 4 Miklos Vajna 2015-10-09 22:42:24 UTC
*** Bug 90224 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2015-10-12 07:09:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=51438e87d0e17a4cc3c991165d22c740b3ac1fc2

tdf#89165 sw: looping layout in SwHeadFootFrm::FormatSize()

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2015-10-16 10:22:47 UTC
I'll backport to 5.0; not sure if 4.4 makes any sense, since the last RC from the 4.4 line is already tagged.
Comment 7 Timur 2015-10-19 09:14:52 UTC
Thank you. 
I know it's a moment before 4.4.6 but in Bug 92454 you write it'll be in 4.4.7.
And I wasn't aware there will be 4.4.7.
Comment 8 Commit Notification 2015-11-02 14:55:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47e8bcd703aa74deafd2e5571205f2dc565e6cf2&h=libreoffice-5-0

tdf#89165 sw: looping layout in SwHeadFootFrm::FormatSize()

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur 2015-11-12 17:13:15 UTC
So, 4.4.7 is official: https://wiki.documentfoundation.org/ReleasePlan/4.4#4.4.7_release. Please backport.
Comment 10 Robinson Tryon (qubit) 2015-12-15 11:17:47 UTC Comment hidden (obsolete)