tdf#89165 sw: looping layout in SwHeadFootFrm::FormatSize()

FormatObjsAtFrm() returns false, indicating that the result is not
perfect, and the caller hopes that formatting all children of the frame
again will help. Make sure that in case that assumption turns out to be false, we at
least do not loop.

The loop limit is enough to make the original i#43771 bugdoc still laid
out properly.

(cherry picked from commit 51438e87d0e17a4cc3c991165d22c740b3ac1fc2)

Change-Id: Ife9bd99a628a72edb922d04e05081971b6adf340
Reviewed-on: https://gerrit.libreoffice.org/19407
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>